tests/ui/coherence/negative-coherence/generic_const_type_mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/generic_const_type_mismatch.rs:7:34
   |
LL | impl<const N: u8> Trait for [(); N] {}
   |                                  ^ expected `usize`, found `u8`

error[E0308]: mismatched types
  --> $DIR/generic_const_type_mismatch.rs:9:34
   |
LL | impl<const N: i8> Trait for [(); N] {}
   |                                  ^ expected `usize`, found `i8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
